--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 #page title
-page_title                                : 택시미터기 for Android                    # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : Always On Display                         # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                :                                           # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
-playstore_link                            : https://play.google.com/store/apps/details?id=com.yong.taximeter                 # Enter Google Play Store URL.
-presskit_download_link                    : https://github.com/yymin1022/taxi-meter                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+playstore_link                            : https://play.google.com/store/apps/rdetails?id=com.yong.aod                       # Enter Google Play Store URL.
+presskit_download_link                    : https://github.com/yymin1022/alwaysondisplay                                     # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : assets/taxi-meter_icon.png                # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : 택시미터기                                # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_icon                                  : assets/always-on-display_icon.png                # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_name                                  : Always On Display                                # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : 미터기, 이제 앱으로 활용하세요!
+app_description                           : Always On Display를 모든 기기에서 사용해보세요!
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
