--- a/_config.yml
+++ b/_config.yml
@@ -36,15 +36,15 @@ features                                  :
 
   - title                                 : 다양한 테마 제공
     description                           : LG, 삼성 등 다양한 제조사의 기본 탑재 AOD 테마를 제공합니다.
-    fontawesome_icon_name                 : magic
+    fontawesome_icon_name                 : palette
     
   - title                                 : 번인 방지 옵션 제공
     description                           : OLED 스마트폰에서의 번인 현상 발생을 최소화하고자 일정 주기마다 요소를 이동시키는 번인 방지 옵션을 제공합니다.
-    fontawesome_icon_name                 : mobile
+    fontawesome_icon_name                 : fire-alt
 
   - title                                 : 절전 옵션 제공
     description                           : 최소한의 전력만을 소모하기 위해 근접센서, 조도센서 등을 이용한 자동꺼짐 기능과 자동밝기 조절 기능을 제공합니다.
-    fontawesome_icon_name                 : play-circle
+    fontawesome_icon_name                 : battery-three-quarters
 
   # - title                                 : Automatic Icon and Metadata
   #   description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
