--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ page_title                                : Always On Display                   
 ios_app_id                                :                                           # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
-playstore_link                            : https://play.google.com/store/apps/rdetails?id=com.yong.aod                       # Enter Google Play Store URL.
+playstore_link                            : https://play.google.com/store/apps/details?id=com.yong.aod                       # Enter Google Play Store URL.
 presskit_download_link                    : https://github.com/yymin1022/alwaysondisplay                                     # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
